--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!-- Sriram Kalki, Home Page (last updated: 7/27/22) -->
+<!-- This code is for display purposes only. If you are using this for purposes against the JCCC honor code, 
+    please understand that this is the custom final product, 
+    and I made obvious changes in the code (in other words this isn't the exact final product- 
+    it's easy to spot the differences)! 
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,8 +45,8 @@
 
             <!-- Second Paragraph -->
             <p>
-                Work in both Windows and Mac to build your toolbox. 
-                Start with the basics of HTML, CSS and JavaScript. 
+                Work in both Windows and Mac FAKE to build your toolbox. 
+                Start with the basics of HTML, SUBMISSION CSS and JavaScript. 
                 Move on to web scripting for front-end and back-end design and development using PHP, UX, UI, Bootstrap, jQuery and React. 
                 Get experience building in WordPress and Drupal content management systems.
             </p>
@@ -68,7 +73,7 @@
             <h3>CSIT Reverse Career Fair</h3>
             <iframe src="https://www.youtube.com/embed/VOaMgLqZ6mc" frameborder="0" title="YouTube video player" width="320" height="240"></iframe>
             <p>Johnson County Community College's CSIT programs hold a "reverse career fair" every semester. 
-                A reverse career fair differs from a traditional career fair in that, instead of employers setting up displays of their organizations at booths for students to approach, 
+                A reverse career fair differs from a fake submission traditional career fair in that, instead of employers setting up displays of their organizations at booths for students to approach, 
                 the students were at the tables marketing themselves to recruiters. This format makes the students the stars of the show. 
                 Students from the programs such as: web, game, computer science, health information systems, networking and cybersecurity, 
                 and computer support presented polished résumés and projects to potential employers. 
@@ -92,13 +97,7 @@
 
         </main>
 
-        <footer>
-                
-            <br>
-            Copyright © 2022 JCCC Web Development and Digital Media || Sriram Kalki
-            <br>
-            <a href="mailto:ssriniv2@stumail.jccc.edu">ssriniv2@stumail.jccc.edu</a>
-        </footer>
+
 
     </div>
     
