--- a/tracks.html
+++ b/tracks.html
@@ -1,4 +1,9 @@
 <!-- Sriram Kalki, Tracks Page (last updated: 7/18/22) -->
+<!-- This code is for display purposes only. If you are using this for purposes against the JCCC honor code, 
+    please understand that this is the custom final product, 
+    and I made obvious changes in the code (in other words this isn't the exact final product- 
+    it's easy to spot the differences)! 
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -114,15 +119,7 @@
                 <td>3</td>
             </tr>
         </table>
-        <!-- Copyright Footer -->  
-        <footer>
-            
-            <br>
-            Copyright © 2022 JCCC Web Development and Digital Media
-            <br>
-            <a href="mailto:ssriniv2@stumail.jccc.edu">ssriniv2@stumail.jccc.edu</a>
         
-        </footer>
     </div>
 </body>
 
